--- a/index.html
+++ b/index.html
@@ -1,50 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Magic Fire In Your Hand</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='style/webcam.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style/hand-track.css'>
-    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>  
-    <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"> </script>
-    <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js"></script>
+
+  <meta charset="UTF-8">
+  <title>Handtrack.js : A library for prototyping realtime handtracking in the browser. </title>
+  <link rel="stylesheet" href="https://unpkg.com/carbon-components@latest/css/carbon-components.css" />
+  <link rel="stylesheet" href="css/track.css">
 </head>
-<body>
-    <main id="hand-app">
-        <div class="form-control webcam-start" id="webcam-control">
-                <label class="form-switch">
-                <input type="checkbox" id="webcam-switch">
-                <i></i> 
-                <span id="webcam-caption">Click to Start Camera</span>
-                </label>      
-                <button id="cameraFlip" class="btn d-none"></button>                  
-        </div>
-        <div class="fire"></div>
-        
-        <div id="errorMsg" class="col-12 col-md-6 alert-danger d-none">
-            Fail to start camera, please allow permision to access camera. <br/>
-            If you are browsing through social media built in browsers, you would need to open the page in Sarafi (iPhone)/ Chrome (Android)
-            <button id="closeError" class="btn btn-primary ml-3">OK</button>
-        </div>
-        <div class="md-modal md-effect-12">
-            <div id="app-panel" class="app-panel md-content row p-0 m-0">     
-                <div id="webcam-container" class="webcam-container col-12 d-none p-0 m-0">
-                    <video id="webcam" autoplay playsinline width="640" height="480"></video>
-                    <div id="canvas" width="640" height="480"></div>
-                    <div class="loading d-none">
-                        Loading Model
-                        <div class="spinner-border" role="status">
-                            <span class="sr-only"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>        
-        </div>
-        <div class="md-overlay"></div>
-    </main>
-    <script src='js/hand-track.js'></script>
+
+<body class="bx--body p20">
+  <!-- <img id="img" src="hand.jpg"/>  -->
+  <div class="p20">
+    Handtrack.js allows you prototype handtracking interactions in the browser in 3 lines of code.
+  </div>
+  <div class="mb10">
+    <button  id="trackbutton" class="bx--btn bx--btn--secondary" type="button" disabled>
+      Toggle Video
+    </button>
+    <button id="nextimagebutton" class="mt10 bx--btn bx--btn--secondary" type="button" disabled>
+      Next Image
+    </button>
+    <div id="updatenote" class="updatenote mt10"> loading model ..</div>
+  </div>
+  <video class="videobox canvasbox" autoplay="autoplay" id="myvideo"></video>
+  <canvas id="canvas" class="border canvasbox"></canvas>
+  <div class="mt10">
+    <img src="images/1.jpg" class="canvasbox  hidden" id="handimage" alt="">
+
+  </div>
+
+  <script src="https://unpkg.com/carbon-components@latest/scripts/carbon-components.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/handtrackjs@latest/dist/handtrack.min.js"> </script>
+  <script src="js/index.js"></script>
 </body>
+
 </html>
